--- a/EMSYS/Views/Dashboard/Index.cshtml
+++ b/EMSYS/Views/Dashboard/Index.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = Resource.Dashboard;
     Layout = "~/Views/Shared/_LayoutAfterLogin.cshtml";
     bool isAdmin = User.IsInRole("System Admin");
-    bool isTeacher = User.IsInRole("Teacher");
+    bool isTeacher = User.IsInRole("Instructor");
     bool isStudent = User.IsInRole("Student");
 }
 
@@ -26,15 +26,15 @@
                     <div class="card-body p-4">
                         <div class="d-flex align-items-center">
                             <div class="flex-grow-1 overflow-hidden">
-                                <p class="text-capitalize fw-medium text-muted text-truncate mb-0 fs-14">@Resource.TotalTeacher</p>
+                                <p class="text-capitalize fw-medium text-muted text-truncate mb-0 fs-14">@Resource.TotalInstructor</p>
                             </div>
                             <div class="flex-shrink-0">
-                                <div class="fs-14 mb-0 text-muted"><i class="fa-solid fa-circle-info align-middle" data-bs-toggle="tooltip" data-bs-placement="top" title="@Resource.TotalTeacherTooltip"></i></div>
+                                <div class="fs-14 mb-0 text-muted"><i class="fa-solid fa-circle-info align-middle" data-bs-toggle="tooltip" data-bs-placement="top" title="@Resource.TotalInstructorTooltip"></i></div>
                             </div>
                         </div>
                         <div class="d-flex align-items-end justify-content-between mt-4">
                             <div>
-                                <h4 class="fs-27 fw-bold ff-secondary mb-4">@Model.TotalTeacher</h4>
+                                <h4 class="fs-27 fw-bold ff-secondary mb-4">@Model.TotalInstructor</h4>
                                 <a href="@Url.Action("index","user")" class="text-decoration-underline fw-light text-muted fs-13 hover-color-secondarycolor">@Resource.View @Resource.User</a>
                             </div>
                             <div class="avatar-sm flex-shrink-0">
