old changes reapplied

--- a/EMSYS/Views/Account/Login.cshtml
+++ b/EMSYS/Views/Account/Login.cshtml
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="row justify-content-start align-items-start gx-0 gx-sm-5">
             <div class="col-lg-6 pt-5 pt-lg-0 order-1 order-lg-0">
-                <img src="~/assets/login.jpg" class="img-fluid w-100 rounded" alt="" />
+                <img src="~/assets/login.png" class="img-fluid w-100 rounded" alt="" />
             </div>
             <div class="col-lg-6 order-0 order-lg-1">
                 <h1 class="fw600 pb-2 title-lg"><span class="color-primarycolor">@Resource.Login</span> @Resource.ToNetStarter</h1>
