--- a/EMSYS/Views/Account/Register.cshtml
+++ b/EMSYS/Views/Account/Register.cshtml
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="row justify-content-start align-items-start gx-0 gx-sm-5">
             <div class="col-lg-6 pt-5 pt-lg-0 order-1 order-lg-0">
-                <img src="~/assets/register.jpg" class="img-fluid w-100 rounded" alt="" />
+                <img src="~/assets/register.png" class="img-fluid w-100 rounded" alt="" />
             </div>
             <div class="col-lg-6 order-0 order-lg-1">
                 <h1 class="fw600 pb-2 text-capitalizetitle-lg"><span class="color-primarycolor">@Resource.SignUp</span> @Resource.AnAccount</h1>
