--- a/EMSYS/Views/Account/ResetPassword.cshtml
+++ b/EMSYS/Views/Account/ResetPassword.cshtml
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row justify-content-start align-items-start gx-0 gx-sm-5">
             <div class="col-lg-6 pt-5 pt-lg-0 order-1 order-lg-0">
-                <img src="~/assets/resetpassword.jpg" class="img-fluid w-100 rounded" alt="" />
+                <img src="~/assets/resetpassword.png" class="img-fluid w-100 rounded" alt="" />
             </div>
             <div class="col-lg-6 order-0 order-lg-1">
                 <h1 class="fw600 pb-2 title-lg"><span class="color-primarycolor">@Resource.Reset</span> @Resource.YourPassword</h1>
