--- a/EMSYS/Views/Shared/_Layout.cshtml
+++ b/EMSYS/Views/Shared/_Layout.cshtml
@@ -14,7 +14,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap" rel="stylesheet">
     @if (lang == "ar")
     {
         <link id="bootstrap-rtl" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-dpuaG1suU0eT09tx5plTaGMLBsfDLzUCCUXOY2j/LSvXYuG6Bqs43ALlhIqAJVRb" crossorigin="anonymous">
@@ -72,6 +72,17 @@
                                         <li class="nav-item">
                                             <a class="nav-link ms-3 me-1 pe-0 hover-color-primarycolor" href="@Url.Action("index","home")#features">@EMSYS.Resources.HomePageResource.Features</a>
                                         </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link ms-3 me-1 pe-0 hover-color-primarycolor" href="@Url.Action("index","home")#faq">@EMSYS.Resources.HomePageResource.FAQ</a>
+                                        </li>
+                                             <li class="nav-item dropdown">
+                                        <a class="nav-link dropdown-toggle ms-3 me-1 pe-0 hover-color-primarycolor" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                            @System.Threading.Thread.CurrentThread.CurrentCulture.ToString().ToUpper()
+                                        </a>
+                                        <ul class="dropdown-menu">
+                                            @await Html.PartialAsync("~/Views/Shared/_LanguageChoices.cshtml")
+                                        </ul>
+                                    </li>
                                     }
                                    
                                     <li class="nav-item">
