--- a/EMSYS/Views/User/Index.cshtml
+++ b/EMSYS/Views/User/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model EMSYS.Models.UserProfileListing
 @using EMSYS.Models;
-@using EMSYS.CustomHelper;f
+@using EMSYS.CustomHelper;
 @{
     ViewBag.Title = Resource.UserManagement;
     Layout = "~/Views/Shared/_LayoutAfterLogin.cshtml";
