Final UI clean up and text edits

--- a/EMSYS/Views/Shared/_FooterBeforeLogin.cshtml
+++ b/EMSYS/Views/Shared/_FooterBeforeLogin.cshtml
@@ -3,19 +3,13 @@
     <div class="container">
         <div class="row justify-content-around">
             <div class="col-md-6 col-lg-4">
-                <h4 class="pb-2 footer-brand">FGSSR Exam Portal</h4>
+                <h4 class="pb-2 footer-brand">EMSYS | FGSSR Exam Portal</h4>
                 <p>
                     <strong>@EMSYS.Resources.HomePageResource.Email</strong>: contact@fgssr.com<br>
                 </p>
                 <div>
                     &copy; Copyright @(DateTime.UtcNow.Year) FGSSR Exam Portal. All Rights Reserved.
                 </div>
-            </div>
-            <div class="col-md-6 col-lg-3 pt-md-4 pt-lg-0">
-                <h4 class="footer-title pb-2">@EMSYS.Resources.HomePageResource.FollowUs</h4>
-                <a href="#" class="rounded-circle bg-secondarycolor color-white p-2 text-center hover-color-white border-0 hover-bg-primarycolor"><i class="fa-brands fa-instagram wh-20"></i></a>
-                <a href="#" class="rounded-circle bg-secondarycolor color-white p-2 text-center hover-color-white border-0 hover-bg-primarycolor"><i class="fa-brands fa-youtube wh-20"></i></a>
-                <a href="#" class="rounded-circle bg-secondarycolor color-white p-2 text-center hover-color-white border-0 hover-bg-primarycolor"><i class="fa-solid fa-globe wh-20"></i></a>
             </div>
         </div>
     </div>
