--- a/EMSYS/Views/Shared/_LayoutAfterLogin.cshtml
+++ b/EMSYS/Views/Shared/_LayoutAfterLogin.cshtml
@@ -33,7 +33,7 @@
     <header id="header" class="header fixed-top d-flex justify-content-between align-items-center">
         <div>
             <a href="index.html" class="logo d-flex align-items-center">
-                <span class="brandname smallerforphone">EMSYS</span>
+                <a class="nav-link brandname hover-color-primarycolor ps-0" href="@Url.Action("index","home")">EMSYS</a>
             </a>
         </div>
         <nav class="header-nav text-end">
