--- a/EMSYS/Views/Home/Index.cshtml
+++ b/EMSYS/Views/Home/Index.cshtml
@@ -22,12 +22,12 @@
         </div>
     </div>
 </section>
-<section id="whyus" class="pt-0 pb-12">
+<section id="whyus" class="pt-0 pb-12 mt-12">
     <div class="container">
         <div class="row justify-content-center align-items-center text-center text-center">
             <div class="col-lg-6">
-                <div class="fs-20 fw500 color-primarycolor">@HomePageResource.WhyUsTitle</div>
-                <div class="fs-32 fw600 text-capitalize lh-base">@HomePageResource.WhyUsDescription</div>
+                <div class="fs-32 fw500 color-primarycolor">@HomePageResource.WhyUsTitle</div>
+                <div class="fs-20 fw600 text-capitalize lh-base">@HomePageResource.WhyUsDescription</div>
             </div>
         </div>
         <div class="row justify-content-center align-items-center text-center mt-3">
@@ -61,7 +61,7 @@
         </div>
     </div>
 </section>
-<section id="features" class="pt-6 pb-12">
+@* <section id="features" class="pt-6 pb-12">
     <div class="container">
         <div class="row justify-content-center align-items-center text-center text-center mb-3">
             <div class="col-lg-6">
@@ -132,4 +132,4 @@
             </div>
         </div>
     </div>
-</section>
+</section> *@
