--- a/EMSYS/Views/Account/Login.cshtml
+++ b/EMSYS/Views/Account/Login.cshtml
@@ -32,13 +32,27 @@
                             @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "invalid-message" })
                         </div>
                     </div>
-                    <div class="mb-3 text-break">
-                        <div class="form-group">
-                            @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "form-label required fw600" })
-                            @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @type = "password" } })
-                            @Html.ValidationMessageFor(model => model.Password, "", new { @class = "invalid-message" })
-                        </div>
+
+
+
+
+
+
+
+                    <div class="form-group" id="PassWord-field">
+                        @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "form-label required fw600" })
+                        @Html.TextBoxFor(model => model.Password, new { @class = "form-control", @type = "password", @id = "Password" })
+                        @Html.ValidationMessageFor(model => model.Password, "", new { @class = "invalid-message" })
+                        <i class="far fa-eye-slash" id="Show_Hide"></i>
                     </div>
+
+
+
+
+
+
+
+
                     <div class="row gx-0 mb-4">
                         <div class="col-md-6">
                             <div class="form-check">
@@ -55,5 +69,11 @@
             </div>
         </div>
     </div>
+
+
+
+    <script src="~/js/password_showhide.js"></script>
 </section>
+
+
 
