--- a/EMSYS/Views/User/_ProfileInfo.cshtml
+++ b/EMSYS/Views/User/_ProfileInfo.cshtml
@@ -1,4 +1,4 @@
-﻿@model EMSYS.Models.UserProfileViewModel
+@model EMSYS.Models.UserProfileViewModel
 @Html.HiddenFor(m => m.Id)
 @Html.HiddenFor(m => m.AspNetUserId)
 
@@ -91,8 +91,8 @@
     <div class="row">
         <div class="col-md-6">
             <div class="mb-3 text-break">
-                <div>@Html.LabelFor(model => model.CountryName, htmlAttributes: new { @class = "fw600" })</div>
-                <div>@Html.DisplayFor(model => model.CountryName, new { htmlAttributes = new { @class = "form-control" } })</div>
+                <div>@Html.LabelFor(model => model.GovernateName, htmlAttributes: new { @class = "fw600" })</div>
+                <div>@Html.DisplayFor(model => model.GovernateName, new { htmlAttributes = new { @class = "form-control" } })</div>
             </div>
         </div>
         <div class="col-md-6">
