--- a/EMSYS/Views/Account/Register.cshtml
+++ b/EMSYS/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model RegisterViewModel
+﻿@* @model RegisterViewModel
 @using EMSYS.CustomHelper
 @{
     ViewBag.Title = Resource.SignUp;
@@ -67,5 +67,6 @@
                 }
             </div>
         </div>
-    </div>
+    </div>4
 </section>
+ *@
