--- a/EMSYS/Views/Home/Index.cshtml
+++ b/EMSYS/Views/Home/Index.cshtml
@@ -10,8 +10,8 @@
                     <h1 class="fs-48 fw600">@HomePageResource.HomeTitleOne</h1>
                     <div class="fs-16 pt-2">@HomePageResource.HomeDescription</div>
                     <div class="pt-3">
-                        <span class="nav-link p-0 m-0">
-                            <a class="border-0 bg-secondarycolor hover-bg-primarycolor color-white hover-color-white btn-padding rounded hover-boxshadow fs-16 d-inline-block hover-moveup" href="@Url.Action("register","account")">@HomePageResource.SignUp</a>
+  @*                       <span class="nav-link p-0 m-0">
+                            <a class="border-0 bg-secondarycolor hover-bg-primarycolor color-white hover-color-white btn-padding rounded hover-boxshadow fs-16 d-inline-block hover-moveup" href="@Url.Action("register","account")">@HomePageResource.SignUp</a> *@
                         </span>
                     </div>
                 </div>
