Solve Issues#6 - #38 and new issue : show only the users exams

--- a/EMSYS/Views/StudentExam/CurrentExam.cshtml
+++ b/EMSYS/Views/StudentExam/CurrentExam.cshtml
@@ -93,7 +93,14 @@
                     if (!response.ok) {
                         throw new Error('Network response was not ok');
                     }
-                    return response.text();
+                  //  return response.text();
+                     //  return response.text();
+                 // Solve bug No#38 by Samy
+                  $(`#${partialview}`).html(`
+                 <div class="alert alert-info text-center mt-4">
+                        <strong>No Exams Available at the Moment.</strong>
+                    </div>
+                    `);
                 })
                 .then(data => {
                     $(`#${partialview}`).html(data);
